fix spacing on some elements

--- a/src/asset/less/leaderboard.less
+++ b/src/asset/less/leaderboard.less
@@ -98,6 +98,10 @@
     padding: 10px;
     margin-bottom:10px;
     border-bottom: 10px solid #E9E9E9;
+
+    i {
+        padding-right: 4px;
+    }
 }
 
 .leaderboard-platform-wrapper {
